// OnlineLib Database Schema
// Format: DBML (dbdiagram.io)
// Paste at: https://dbdiagram.io/d

// ============================================
// MULTI-SITE DOMAIN
// ============================================

Table sites {
  id uuid [pk]
  code varchar(50) [unique, not null, note: 'e.g. general, programming']
  primary_domain varchar(255) [unique, not null]
  default_language varchar(10) [not null]
  theme varchar(50) [not null, default: 'default']
  ads_enabled boolean [not null, default: false]
  indexing_enabled boolean [not null, default: false]
  sitemap_enabled boolean [not null, default: true]
  features_json jsonb [not null, default: '{}']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table site_domains {
  id uuid [pk]
  site_id uuid [not null, ref: > sites.id]
  domain varchar(255) [unique, not null]
  is_primary boolean [not null, default: false]
  created_at timestamptz [not null]

  indexes {
    site_id
  }
}

// ============================================
// METADATA DOMAIN
// ============================================

Table authors {
  id uuid [pk]
  site_id uuid [not null, ref: > sites.id]
  slug varchar [not null]
  name varchar [not null]
  bio text
  photo_path varchar
  indexable boolean [not null, default: true]
  seo_title varchar
  seo_description varchar
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (site_id, slug) [unique]
    site_id
  }
}

Table genres {
  id uuid [pk]
  site_id uuid [not null, ref: > sites.id]
  slug varchar [not null]
  name varchar [not null]
  description text
  indexable boolean [not null, default: true]
  seo_title varchar
  seo_description varchar
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (site_id, slug) [unique]
    site_id
  }
}

Table edition_authors {
  edition_id uuid [not null, ref: > editions.id]
  author_id uuid [not null, ref: > authors.id]
  order int [not null, default: 0]
  role int [not null, default: 0, note: '0=Author, 1=Translator, 2=Editor, 3=Illustrator']

  indexes {
    (edition_id, author_id) [pk]
    author_id
  }
}

Table edition_genres {
  editions_id uuid [not null, ref: > editions.id, note: 'EF naming convention']
  genres_id uuid [not null, ref: > genres.id, note: 'EF naming convention']

  indexes {
    (editions_id, genres_id) [pk]
    genres_id
  }
}

// ============================================
// CONTENT DOMAIN
// ============================================

Table works {
  id uuid [pk]
  site_id uuid [not null, ref: > sites.id]
  slug varchar [not null]
  created_at timestamptz [not null]

  indexes {
    (site_id, slug) [unique]
    site_id
  }
}

Table editions {
  id uuid [pk]
  work_id uuid [not null, ref: > works.id]
  site_id uuid [not null, ref: > sites.id, note: 'denorm from work']
  language varchar [not null, note: 'en, uk, etc']
  slug varchar [not null]
  title varchar [not null]
  description text
  status int [not null, note: '0=Draft, 1=Published, 2=Hidden']
  published_at timestamptz
  source_edition_id uuid [ref: > editions.id, note: 'for translations']
  cover_path varchar
  is_public_domain boolean [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  // SEO fields
  indexable boolean [not null, default: true]
  seo_title varchar
  seo_description varchar
  canonical_override varchar

  indexes {
    (work_id, language) [unique]
    (site_id, language, slug) [unique]
    site_id
    status
    source_edition_id
  }

  Note: 'Also has GIST index on lower(title) for trigram search'
}

Table chapters {
  id uuid [pk]
  edition_id uuid [not null, ref: > editions.id]
  chapter_number int [not null]
  slug varchar
  title varchar [not null]
  html text [not null]
  plain_text text [not null]
  word_count int
  search_vector tsvector [note: 'GIN indexed for FTS']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (edition_id, chapter_number) [unique]
    (edition_id, slug)
    search_vector [type: gin]
  }

  Note: 'Has trigger chapters_search_vector_update for auto FTS indexing'
}

Table book_files {
  id uuid [pk]
  edition_id uuid [not null, ref: > editions.id]
  original_file_name varchar [not null]
  storage_path varchar [not null]
  format int [not null, note: '0=Epub, 1=Pdf, 2=Fb2']
  sha256 varchar
  uploaded_at timestamptz [not null]
}

Table ingestion_jobs {
  id uuid [pk]
  edition_id uuid [not null, ref: > editions.id]
  book_file_id uuid [not null, ref: > book_files.id]
  target_language varchar [not null]
  work_id uuid [ref: > works.id]
  source_edition_id uuid [ref: > editions.id]
  status int [not null, note: '0=Queued, 1=Processing, 2=Done, 3=Failed']
  attempt_count int [not null]
  error text
  created_at timestamptz [not null]
  started_at timestamptz
  finished_at timestamptz
}

Table search_documents {
  id text [pk, note: 'Composite key as string']
  title text [not null]
  content text [not null]
  language text [not null]
  site_id uuid [not null, note: 'Denormalized, no FK']
  search_vector tsvector [not null]
  metadata jsonb [default: '{}']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    site_id
    language
    search_vector [type: gin]
  }

  Note: 'Denormalized FTS table for cross-entity search'
}

// ============================================
// USER DOMAIN
// ============================================

Table users {
  id uuid [pk]
  email varchar(255) [unique, not null]
  name varchar(255)
  google_subject varchar(255) [unique, not null, note: 'Google OAuth sub']
  created_at timestamptz [not null]
}

Table user_libraries {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  edition_id uuid [not null, ref: > editions.id]
  created_at timestamptz [not null]

  indexes {
    (user_id, edition_id) [unique]
  }
}

Table reading_progresses {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  site_id uuid [not null, ref: > sites.id]
  edition_id uuid [not null, ref: > editions.id]
  chapter_id uuid [not null, ref: > chapters.id]
  locator text [not null, note: 'JSON locator']
  percent float
  updated_at timestamptz [not null]

  indexes {
    (user_id, site_id, edition_id) [unique]
    site_id
  }
}

Table bookmarks {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  site_id uuid [not null, ref: > sites.id]
  edition_id uuid [not null, ref: > editions.id]
  chapter_id uuid [not null, ref: > chapters.id]
  locator text [not null]
  title varchar
  created_at timestamptz [not null]

  indexes {
    (user_id, site_id, edition_id)
    site_id
  }
}

Table notes {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  site_id uuid [not null, ref: > sites.id]
  edition_id uuid [not null, ref: > editions.id]
  chapter_id uuid [not null, ref: > chapters.id]
  locator text [not null]
  text text [not null]
  version int [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (user_id, site_id, edition_id)
    site_id
    edition_id
    chapter_id
  }
}

// ============================================
// ADMIN DOMAIN
// ============================================

Table admin_users {
  id uuid [pk]
  email varchar [unique, not null]
  password_hash varchar [not null]
  role int [not null, note: '0=Admin, 1=Editor, 2=Moderator']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table admin_refresh_tokens {
  id uuid [pk]
  admin_user_id uuid [not null, ref: > admin_users.id]
  token varchar [unique, not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null]
}

Table admin_audit_logs {
  id uuid [pk]
  admin_user_id uuid [not null, ref: > admin_users.id]
  action_type varchar [not null]
  entity_type varchar [not null]
  entity_id uuid
  payload_json text
  created_at timestamptz [not null]

  indexes {
    action_type
    admin_user_id
    created_at
  }
}

// ============================================
// TABLE GROUPS (for visual organization)
// ============================================

TableGroup multisite {
  sites
  site_domains
}

TableGroup metadata {
  authors
  genres
  edition_authors
  edition_genres
}

TableGroup content {
  works
  editions
  chapters
  book_files
  ingestion_jobs
  search_documents
}

TableGroup user_data {
  users
  user_libraries
  reading_progresses
  bookmarks
  notes
}

TableGroup admin {
  admin_users
  admin_refresh_tokens
  admin_audit_logs
}
